--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+
+
+
+
 .nav-list li
 {
     list-style: none;
@@ -7,4 +11,25 @@
     font-style: normal;
     font-weight: bold;
     font-size: 16px;
+}
+
+.nav-list li a{
+    text-decoration: none;
+    color: gray;
+}
+
+.nav-social li
+{
+    list-style: none;
+    text-align: right;
+    padding: 20px 25px;
+    font-family: sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.nav-social li a{
+    text-decoration: none;
+    color: gray;
 }
