--- a/style.css
+++ b/style.css
@@ -1,35 +1,67 @@
+.navbar
+{    
+    position: fixed;
+    cursor: pointer;
+    width: 100%;
+    height: 100px;
+    left: 0px;
+    top: 0px;
+}
 
-
-
+.nav-list{
+    position: absolute;
+    width: 100%;
+    top: 20px;
+    left: 680px;
+}
 
 .nav-list li
 {
+    
+    display: inline;
     list-style: none;
-    text-align: right;
-    padding: 20px 25px;
+    padding: 0px 10px;
     font-family: sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 16px;
 }
+
+
 
 .nav-list li a{
     text-decoration: none;
     color: gray;
 }
 
+.nav-social{
+    position: absolute;
+    width: 100%;
+    top: 12px;
+    left: 1090px;
+}
+
 .nav-social li
 {
+    display: inline;
     list-style: none;
-    text-align: right;
-    padding: 20px 25px;
-    font-family: sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
+    padding: 0px 19px;
+    
 }
 
 .nav-social li a{
     text-decoration: none;
-    color: gray;
+    color: rgb(209, 208, 208);
 }
+
+.media-circle
+{
+    position: absolute;
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    display: inline;
+    background: rgb(209, 208, 208);
+}
+
+
