--- a/style.css
+++ b/style.css
@@ -1,18 +1,30 @@
+body
+{
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+        
+}
+
+
+/* -----------------------------------NAVBAR------------------------------------- */
+
+
 .navbar
 {    
-    position: fixed;
+    position: absolute;
     cursor: pointer;
     width: 100%;
     height: 100px;
     left: 0px;
-    top: 0px;
+    top: 20px;
 }
 
 .nav-list{
     position: absolute;
     width: 100%;
     top: 20px;
-    left: 680px;
+    left: 870px;
 }
 
 .nav-list li
@@ -21,31 +33,49 @@
     display: inline;
     list-style: none;
     padding: 0px 10px;
-    font-family: sans-serif;
+    font-family: 'Work Sans', sans-serif;
     font-style: normal;
-    font-weight: bold;
     font-size: 16px;
 }
-
-
 
 .nav-list li a{
     text-decoration: none;
     color: gray;
 }
 
+.home
+{
+    position: absolute;
+    top: 40px;
+    left: 910px;
+    font-family: 'Work Sans', sans-serif;
+    font-style: normal;
+    font-size: 16px;
+    padding: 0px 10px;
+}
+
+.underline
+{
+    position: absolute;
+    top: 82px;
+    left: 917px;
+    width: 50px;
+    height: 2px;
+    background-color: rgb(56, 56, 56);
+}
+
 .nav-social{
     position: absolute;
     width: 100%;
-    top: 12px;
-    left: 1090px;
+    top: 14px;
+    left: 1255px;
 }
 
 .nav-social li
 {
     display: inline;
     list-style: none;
-    padding: 0px 19px;
+    padding: 0px 22px;
     
 }
 
@@ -64,4 +94,142 @@
     background: rgb(209, 208, 208);
 }
 
+.home a
+{
+    text-decoration: none;
+    color: rgb(56, 56, 56);
+}
 
+.media-circle:hover
+{
+    background-color: rgb(56, 56, 56);
+}
+
+.nav-list li a:hover
+{
+    color:  black;
+
+}
+
+/* -------------------------------------BODY--------------------------------------- */
+
+.text-part-back
+{
+    position: absolute;
+    left: 0px;
+    top: 135px;
+    width: 70%;
+    height: 800px;
+    background-color: black;
+}
+
+.iam
+{
+    position: relative;
+    top: 200px;
+    text-align: center;
+    font-size: 40px;
+    color: white;
+    font-style: normal;
+    font-family: 'Work Sans', sans-serif;
+}
+
+.photo
+{
+    position: absolute;
+    right: 0px;
+    top: 135px;
+    width: 30%;
+    height: 800px;
+    background-color: rgb(201, 199, 199);
+}
+
+
+/* -------------------------FOOTER---------------------------- */
+
+
+.footer
+{
+    position: absolute;
+    width: 100%;
+    top: 900px;
+    height: 550px;
+}
+
+.big-text
+{
+    position: relative;
+    text-align: center;
+    top: 170px;
+    font-family: 'Work Sans', sans-serif;
+    font-style: normal;
+    font-size: 35px;
+    color: rgb(56, 56, 56);    
+}
+
+.small-text
+{
+    position: relative;
+    text-align: center;
+    top: 140px;
+    font-family: 'Open Sans', sans-serif;
+    font-style: normal;
+    font-size: 15px;
+    color: rgb(114, 114, 114);    
+}
+
+.subscribe
+{
+    position: relative;
+    top: 160px;
+    left: 700px;
+    height: 60px;
+    width: 110px;
+    background-color: black;
+}
+
+.sub-text
+{
+    position: relative;
+    top: 11px;
+    font-size: 16px;
+    text-align: center;
+    font-family: 'Work Sans', sans-serif;
+    color: white;
+}
+
+.sub-link
+{
+    text-decoration: none;
+    color: white;
+}
+
+.bottom-nav-social{
+    position: relative;
+    top: 200px;
+    left: 612px;
+}
+
+.bottom-nav-social li a{
+    text-decoration: none;
+    color: rgb(209, 208, 208);
+}
+
+.bottom-nav-social li
+{
+    display: inline;
+    list-style: none;
+    padding: 0px 22px;
+    
+}
+
+.archana
+{
+    position: relative;
+    top: 245px;
+    left: 689px;
+    font-family: 'Work Sans', sans-serif;
+    font-style: normal;
+    font-size: 16px;
+    color:  rgb(153, 152, 152);
+}
