--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body
     position: absolute;
     width: 100%;
     top: 20px;
-    left: 870px;
+    left: 880px;
 }
 
 .nav-list li
@@ -47,20 +47,130 @@ body
 {
     position: absolute;
     top: 40px;
-    left: 910px;
+    left: 920px;
     font-family: 'Work Sans', sans-serif;
     font-style: normal;
     font-size: 16px;
     padding: 0px 10px;
 }
 
+.home a
+{
+    text-decoration: none;
+    color: rgb(56, 56, 56);
+}
+
 .underline
 {
     position: absolute;
     top: 82px;
-    left: 917px;
-    width: 50px;
-    height: 2px;
+    left: 919px;
+    width: 67px;
+    height: 1px;
+    background-color: rgb(56, 56, 56);
+}
+
+.video
+{
+    position: absolute;
+    top: 40px;
+    left: 990px;
+    font-family: 'Work Sans', sans-serif;
+    font-style: normal;
+    font-size: 16px;
+    padding: 0px 10px;
+}
+
+.video a{
+    text-decoration: none;
+    color: rgb(56, 56, 56);
+}
+
+.underlinev
+{
+    position: absolute;
+    top: 82px;
+    left: 988px;
+    width: 67px;
+    height: 1px;
+    background-color: rgb(56, 56, 56);
+}
+
+.support
+{
+    position: absolute;
+    top: 40px;
+    left: 1057px;
+    font-family: 'Work Sans', sans-serif;
+    font-style: normal;
+    font-size: 16px;
+    padding: 0px 10px;
+}
+
+.support a{
+    text-decoration: none;
+    color: rgb(56, 56, 56);
+}
+
+.underlines
+{
+    position: absolute;
+    top: 82px;
+    left: 1058px;
+    width: 67px;
+    height: 1px;
+    background-color: rgb(56, 56, 56);
+}
+
+.blog
+{
+    position: absolute;
+    top: 40px;
+    left: 1128px;
+    font-family: 'Work Sans', sans-serif;
+    font-style: normal;
+    font-size: 16px;
+    padding: 0px 10px;
+}
+
+.blog a{
+    text-decoration: none;
+    color: rgb(56, 56, 56);
+}
+
+.underlineb
+{
+    position: absolute;
+    top: 82px;
+    left: 1124px;
+    width: 67px;
+    height: 1px;
+    background-color: rgb(56, 56, 56);
+}
+
+.contact
+{
+    position: absolute;
+    top: 40px;
+    left: 1185px;
+    font-family: 'Work Sans', sans-serif;
+    font-style: normal;
+    font-size: 16px;
+    padding: 0px 10px;
+}
+
+.contact a{
+    text-decoration: none;
+    color: rgb(56, 56, 56);
+}
+
+.underlinec
+{
+    position: absolute;
+    top: 82px;
+    left: 1193px;
+    width: 67px;
+    height: 1px;
     background-color: rgb(56, 56, 56);
 }
 
@@ -91,18 +201,13 @@ body
     height: 28px;
     border-radius: 50%;
     display: inline;
-    background: rgb(209, 208, 208);
+    background: white;
 }
 
-.home a
-{
-    text-decoration: none;
-    color: rgb(56, 56, 56);
-}
 
 .media-circle:hover
 {
-    background-color: rgb(56, 56, 56);
+    background-color: rgb(201, 201, 201);
 }
 
 .nav-list li a:hover
@@ -112,6 +217,9 @@ body
 }
 
 /* -------------------------------------BODY--------------------------------------- */
+
+
+/* HOME PAGE CSS */
 
 .text-part-back
 {
@@ -134,6 +242,17 @@ body
     font-family: 'Work Sans', sans-serif;
 }
 
+.aboutme
+{
+    position: relative;
+    top: 200px;
+    text-align: center;
+    font-size: 20px;
+    color: white;
+    font-style: normal;
+    font-family: 'Open Sans', sans-serif;
+}
+
 .photo
 {
     position: absolute;
@@ -143,6 +262,168 @@ body
     height: 800px;
     background-color: rgb(201, 199, 199);
 }
+
+
+/* VIDEO PAGE CSS */
+
+.video-back
+{
+    position: absolute;
+    left: 0px;
+    top: 135px;
+    width: 100%;
+    height: 850px;
+    background-color: #f0efef;
+}
+
+/* CONTACT PAGE */
+
+.left-c
+{
+    position: absolute;
+    left: 0px;
+    top: 90px;
+    width: 50%;
+    height: 850px;
+    
+}
+
+.get_in
+{
+    position: relative;
+    top: 0px;
+    padding: 150px;
+    font-size: 50px;
+    color: black;
+    font-style: normal;
+    font-family: 'Work Sans', sans-serif;
+}
+
+.form
+{
+    position: absolute;
+    right: 0px;
+    top: 90px;
+    width: 50%;
+    height: 850px;
+}
+
+.name
+{
+    position: relative;
+    top: 100px;
+    padding: 10px 100px;
+    font-size: 20px;
+    font-family: 'Open Sans', sans-serif;
+    color: gray;
+}
+
+.fname-input{
+    position: relative;
+    width: 35%;
+    left: 100px;
+    top: 110px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    font-size: 15px;
+    font-family: 'Open Sans', sans-serif;
+    color: gray;
+}
+
+.lname-input
+{
+    position: relative;
+    top: 110px;
+    width: 35%;
+    left: 140px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    font-size: 15px;
+    font-family: 'Open Sans', sans-serif;
+    color: gray;
+}
+
+.email
+{
+    position: relative;
+    top: 140px;
+    padding: 10px 100px;
+    font-size: 20px;
+    font-family: 'Open Sans', sans-serif;
+    color: gray;
+}
+
+.email-input
+{
+    position: relative;
+    width: 50%;
+    top: 150px;
+    left: 100px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    font-size: 15px;
+    font-family: 'Open Sans', sans-serif;
+    color: gray;
+}
+
+.message
+{
+    position: relative;
+    top: 170px;
+    padding: 10px 100px;
+    font-size: 20px;
+    font-family: 'Open Sans', sans-serif;
+    color: gray;
+}
+
+.message-input
+{
+    position: relative;
+    width: 60%;
+    top: 180px;
+    left: 100px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    font-size: 15px;
+    font-family: 'Open Sans', sans-serif;
+    color: gray;
+}
+
+.submit
+{
+    position: relative;
+    top: 220px;
+    left: 100px;
+    height: 60px;
+    width: 110px;
+    background-color: black;
+}
+
+.submit:hover
+{
+    background-color: rgb(65, 65, 65);
+}
+
+.submit a p
+{
+    position: relative;
+    top: 20px;
+    font-size: 16px;
+    text-align: center;
+    font-family: 'Work Sans', sans-serif;
+    color: white;
+}
+
+.submit a
+{
+    text-decoration: none;
+    color: white;
+}
+
 
 
 /* -------------------------FOOTER---------------------------- */
@@ -186,6 +467,11 @@ body
     height: 60px;
     width: 110px;
     background-color: black;
+}
+
+.subscribe:hover
+{
+    background-color: rgb(65, 65, 65);
 }
 
 .sub-text
