completed the website

--- a/style.css
+++ b/style.css
@@ -263,17 +263,205 @@ body
     background-color: rgb(201, 199, 199);
 }
 
+.photo img
+{
+    position: absolute;
+    width: 100%;
+    height: 800px;
+}
 
 /* VIDEO PAGE CSS */
 
 .video-back
 {
     position: absolute;
+    overflow-y: auto;
     left: 0px;
     top: 135px;
     width: 100%;
     height: 850px;
     background-color: #f0efef;
+}
+
+.video1
+{
+    position: absolute;
+    left: 120px;
+    top: 20px;
+}
+
+
+.video2
+{
+    position: absolute;
+    right: 120px;
+    top: 20px;
+}
+
+.video3
+{
+    position: absolute;
+    left: 120px;
+    top: 355px;
+}
+
+.video4
+{
+    position: absolute;
+    right: 120px;
+    top: 355px;
+}
+
+.video5
+{
+    position: absolute;
+    left: 120px;
+    top: 690px;
+}
+
+.video6
+{
+    position: absolute;
+    right: 120px;
+    top: 690px;
+}
+
+
+.video7
+{
+    position: absolute;
+    left: 120px;
+    top: 1025px;
+}
+
+.video8
+{
+    position: absolute;
+    right: 120px;
+    top: 1025px;
+}
+
+.video9
+{
+    position: absolute;
+    left: 120px;
+    top: 1360px;
+}
+
+.video10
+{
+    position: absolute;
+    right: 120px;
+    top: 1360px;
+}
+
+.video11
+{
+    position: absolute;
+    left: 120px;
+    top: 1695px;
+}
+
+
+.video12
+{
+    position: absolute;
+    right: 120px;
+    top: 1695px;
+}
+
+.video13
+{
+    position: absolute;
+    left: 120px;
+    top: 2030px;
+}
+
+.video14
+{
+    position: absolute;
+    right: 120px;
+    top: 2030px;
+}
+
+.video15
+{
+    position: absolute;
+    left: 120px;
+    top: 2365px;
+}
+
+.video16
+{
+    position: absolute;
+    right: 120px;
+    top: 2365px;
+}
+
+
+.video17
+{
+    position: absolute;
+    left: 120px;
+    top: 2700px;
+}
+
+.video18
+{
+    position: absolute;
+    right: 120px;
+    top: 2700px;
+}
+
+.video19
+{
+    position: absolute;
+    left: 120px;
+    top: 3035px;
+}
+
+.video20
+{
+    position: absolute;
+    right: 120px;
+    top: 3035px;
+}
+
+.video21
+{
+    position: absolute;
+    left: 120px;
+    top: 3370px;
+}
+
+
+.video22
+{
+    position: absolute;
+    right: 120px;
+    top: 3370px;
+}
+
+.video23
+{
+    position: absolute;
+    left: 120px;
+    top: 3705px;
+}
+
+.video24
+{
+    position: absolute;
+    right: 120px;
+    top: 3705px;
+}
+
+.video25
+{
+    position: absolute;
+    left: 120px;
+    top: 4040px;
+    padding-bottom: 20px;
 }
 
 /* CONTACT PAGE */
